#83483: Rearrange grid to prevent overflowing on sidebar

--- a/Snowdog_Components/components/Templates/catalog/list/_list.scss
+++ b/Snowdog_Components/components/Templates/catalog/list/_list.scss
@@ -21,10 +21,8 @@ $catalog-list__sidebar-additionl-margin\@large: $spacer--medium $spacer--medium 
     @include mq($screen-l) {
         display: grid;
         grid-template-columns: $catalog-list__sidebar-width 1fr 1fr;
-        grid-template-rows: auto auto auto 1fr;
+        grid-template-rows: auto 1fr;
         grid-template-areas:
-        'banner banner banner'
-        'title title title'
         'sidebar products products'
         'sidebar2 products products';
         }
@@ -35,9 +33,6 @@ $catalog-list__sidebar-additionl-margin\@large: $spacer--medium $spacer--medium 
 
     &__title {
         width: 100%;
-        @include mq($screen-l) {
-            grid-area: title;
-        }
     }
 
     &__banner {
@@ -48,7 +43,6 @@ $catalog-list__sidebar-additionl-margin\@large: $spacer--medium $spacer--medium 
             padding: $catalog-list__banner-padding\@medium;
         }
         @include mq($screen-l) {
-            grid-area: banner;
             padding: $catalog-list__banner-padding\@large;
             margin: $catalog-list__banner-margin\@large;
             border-width: $catalog-list__banner-border-width\@large;
